--- a/Day_01/style.css
+++ b/Day_01/style.css
@@ -16,7 +16,7 @@ body {
     text-align: center;
     box-shadow: 1px 1px 5px white;
     margin-top: 50px;
-    font-family: font-family: 'Roboto', sans-serif;;
+    font-family: 'Roboto', sans-serif;;
 
 }
 .title {
